listo el lab de permisos

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+/lab3b_PermissionsLab/lab3b_PermissionsLab.iml
+/lab3b_DangerousApp/lab3b_DangerousApp.iml
 /lab3a_MyBrowser/lab3a_MyBrowser.iml
 /lab3a_IntentsLab/lab3a_IntentsLab.iml
 /.idea
